[package]
name = "protocol_prototype"
version = "0.1.0"
edition = "2021"

[dependencies]
criterion = "0.4"
rand = "0.8.5"
curve25519-dalek = {version = "4", features = ["rand_core", "digest"]}
ed25519-dalek = {version = "2", features = ["rand_core"]}
rand_core = "0.6"
hex = "0.4.3"
sha2 = "0.10"
argon2 = "0.5"
viadkim = "0.2"
base64 = "0.21"
tokio = { version = "1", features = ["rt", "rt-multi-thread"] }
pkcs8 = { version = "0.10", features = ["pem"] }
rsa = { version = "0.9", features = ["sha2"] }

[[bench]]
name = "protocol_benchmarks"
harness = false

[lib]
name = "protocol_prototype"
path = "src/lib.rs"